# CheneyPowers

./: .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE-NOTES.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
hooks/: session-start
src/cheneypowers/: __init__.py  cli.py  installer.py
